# test_trajectories_automation

./: CMakeLists.txt  README.md  package.xml
action/: MoveToJointPosition.action  PublishTrajectories.action  PublishTrajectory.action
launch/: joint_space.launch  joints_and_poses.launch  operational_space.launch
offline_files/poses/: EE-Pose_freie_Bewegung_3_1.csv  EE-Pose_freie_Bewegung_3_2.csv  EE-Pose_freie_Bewegung_3_3.csv  EE-Pose_freie_Bewegung_3_4.csv  EE-Pose_freie_Bewegung_3_4_v2.csv  EE-Pose_freiesRechteck.csv  EE-Pose_freiesRechteck_relQuat.csv  EE-Pose_freiesRechteck_relQuat_v2.csv  EE-Pose_x-Achse_mit_Basisdrehung.csv
offline_files/poses/20180327_basic_trajectories/: x_rot.csv  x_trans.csv  y_rot.csv  y_trans.csv  z_rot.csv  z_trans.csv
offline_files/poses/20180406/: x_rot.csv  x_trans.csv  y_rot.csv  y_trans.csv  z_rot.csv  z_trans.csv
offline_files/poses/safe_workspace_messung1/: arbitrary1_32143.csv  arbitrary2_32283.csv  arbitrary3_320353_muss noch auf eigentlichen Startwert angepasst werden.csv  arbitrary4_32073_muss noch auf eigentlichen Startwert angepasst werden.csv  mixed_rotation_64073.csv  x-axis_80353.csv  x_world-rotation_16073.csv  xz_circle_640353.csv  xz_circle_640353_corrected.csv  y-axis_320353.csv  y-axis_inv_320353.csv  y-axis_inv_320353.ods  y_world-rotation_32073.csv  z-axis_160353.csv  z_world-rotation_8073.csv  z_world-rotation_8073_corrected.csv
scripts/: jointAngles_and_pose_read.py  jointAngles_read.py  pose_read.py
src/: joint_follower_server.cpp  pose_follower_server.cpp  state_publisher.cpp  test_trajectories_automation_client.cpp
