<?xml version="1.0"?>
<package format="2">
  <name>test_trajectories_automation</name>
  <version>0.0.0</version>
  <description>A package for automated testing of multiple trajectories</description>

  <maintainer email="niklas_joel.schaefer@stud.tu-darmstadt.de">Niklas Schaefer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>iiwa_description</build_depend>
  <build_depend>iiwa_moveit</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>iimoveit</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<build_depend>rosbag</build_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>iiwa_description</build_export_depend>
  <build_export_depend>iiwa_moveit</build_export_depend>
  <build_export_depend>iiwa_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosmsg</build_export_depend>
  <build_export_depend>iimoveit</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>iiwa_description</exec_depend>
  <exec_depend>iiwa_moveit</exec_depend>
  <exec_depend>iiwa_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosmsg</exec_depend>
  <exec_depend>iimoveit</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>rosbag</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
